--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "strict"
   ],
   "devDependencies": {
+    "eslint-config-voltrevo": "0.0.3",
+    "eslint-plugin-require-path-exists": "^1.0.15",
     "gulp": "^3.6.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.9.0",
     "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^0.4.5",
-    "gulp-coveralls": "^0.1.0"
+    "gulp-plumber": "^1.0.0"
   },
   "scripts": {
     "prepublish": "gulp prepublish",
